# equation_drawing

./: .gitignore  README.md  package-lock.json
API/: equation_drawing.sln
API/equation_drawing/: CMakeLists.txt  Caculater.cpp  Caculater.h  Equation.cpp  Equation.h  Variable.cpp  Variable.h  Varible.cpp  Varible.h  Viewer.cpp  Viewer.h  equation_drawing.cpp  equation_drawing.vcxproj  equation_drawing.vcxproj.filters  main.cpp
GUI/: .gitignore  README.md  installer.nsh  package-lock.json  package.json  tsconfig.json  vue.config.js
GUI/extraResources/macOS/: equation_drawing
GUI/plugin/es5-ext/: CHANGELOG.md  README.md
GUI/plugin/es5-ext/array/main/: clear.js
GUI/plugin/es5-ext/date/main/: format.js
GUI/plugin/es5-ext/json/: safe-stringify.js
GUI/plugin/es5-ext/number/main/: pad.js
GUI/plugin/es5-ext/object/: assign-deep.js  compare.js  find-key.js  get-property-names.js
GUI/plugin/es5-ext/promise/main/: as-callback.js
GUI/public/: icon.icns
GUI/src/: App.vue  background.ts  main.ts
GUI/src/assets/: BlaMath_logo.ai
GUI/src/assets/binary/macOS/: equation_drawing
GUI/src/assets/css/: style.css
GUI/src/components/: Draw.vue  Equation.vue  Menu.vue  MenuFooter.vue  Plotly.vue  Variable.vue
GUI/src/models/: Function.ts  equation.ts  request.ts  variable.ts
GUI/src/store/: functions.ts  global.ts  plotly.ts
